appId: br.com.edenred.stg
name: Validar realizar preenchimento do formulario de cadastro com sucesso
tags: 
   - onboarding
   - cadastro
   - acesso_deslogado
env:
    EMAIL: automacao@gmail.com
    CONFIRM_EMAIL: automacao@gmail.com
    CPF: 12065967404
    NAME: John Senna
    TEL: 5511992066269
    DATE: 120419994
---
- runFlow: ./subflows/ios_loader_pages.yaml
#Realizar cadastro
- launchApp:
    clearState: true
- waitForAnimationToEnd:
    timeout: 5000
- assertVisible: "Crie sua conta Ticket"
- tapOn: "Crie sua conta Ticket"
- assertVisible: "Que bom ver você\npor aqui!"
- tapOn: "CPF"
- inputText: "120"
- inputText: "659"
- inputText: "674"
- inputText: "04"
- pressKey: Enter
- tapOn:
    point: "7%,75%"
- tapOn:
    point: "7%,80%"
- tapOn:
    point: "7%,86%"
- tapOn:
    point: "7%,91%"
- tapOn: "Avançar"
- assertVisible: "Informe seus dados pessoais"
- tapOn: "Nome completo"
- inputText: ${NAME}
- pressKey: Enter
- tapOn: "Celular"
- inputText: ${TEL}
- pressKey: Enter
- tapOn: "Data de nascimento"
- inputText: ${DATE}
- pressKey: Enter
- tapOn: "E-mail"
- inputText: ${EMAIL}
- pressKey: Enter
- tapOn: "Confirmar e-mail"
- inputText: ${CONFIRM_EMAIL}
- scrollUntilVisible:
    element: "Avançar"
    direction: DOWN 
